corrected flow on small devices

--- a/index.css
+++ b/index.css
@@ -349,6 +349,7 @@ p#createdby a {
     footer {
         text-align: center;
     }
+    .left,
     .right {
         float: none;
     }
